[package]
name = "galaxycubes"
version = "0.1.0"
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking"] }
#bevy = { version = "0.15.3" }

bevy_embedded_assets = "0.12.0"
tracing = "0.1.41"
bevy_svg = "0.15.1"
rand = "0.9.2"
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 1
